--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In Page</title>
+    <title>Sign Up Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,11 +54,11 @@
     <form action="index.html" method="get">
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
-        <button type="submit">Log In</button>
+        <button type="submit">Sign Up</button>
     </form>
     <div class="account-message">
-        Don't have an account?
-        <button class="signup-button" onclick="window.location.href='/signup';">Sign Up</button>
+        Alreadt have an account?
+        <button class="signup-button" onclick="window.location.href='/login';">Log In</button>
     </div>
 </div>
 
